Refactor CORS configuration to enforce non-null registry parameter; update OpenAPI server URL and improve GrupoCliente repository type definition