@@ -9,6 +9,7 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
 import java.util.List;
+import java.util.Arrays;
 
 @Configuration
 public class OpenApiConfig {
@@ -26,14 +27,15 @@ public class OpenApiConfig {
                                 .email("desarrollo@empresa.com"))
                         .license(new License()
                                 .name("MIT License")
-                                .url("https://opensource.org/licenses/MIT")))
-                .servers(List.of(
+                        )
+                )
+                .servers(Arrays.asList(
                         new Server()
                                 .url("http://localhost:8080")
                                 .description("Servidor de desarrollo local"),
                         new Server()
-                                .url("https://api.empresa.com")
+                                .url("https://api.Prochem.com")
                                 .description("Servidor de producción")
                 ));
-    }
+    };
 }
